--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button onclick="encrypt()">Encrypt</button>
             <button onclick="decrypt()">Decrypt</button>
         </div>
-        <h3>After Initial Shift:</h3>
+        <h3>Initial Shift:</h3>
         <p id="initial-result"></p>
         <h3>Final Result:</h3>
         <p id="result"></p>
